# aerial-images-upload-gui

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  test_coverage.sh
.github/workflows/: build.yml
src/: __init__.py  api_client.py  main.py  sd_monitor.py  staging.py  state_manager.py  stats_tracker.py  upload_manager.py  uploader.py
tests/: conftest.py  test_api_client.py  test_sd_eject.py  test_sd_monitor.py  test_staging_helpers.py  test_state_manager.py  test_stats_tracker.py  test_upload_manager.py  test_uploader_ui.py
tests/integration/: __init__.py  conftest.py  test_already_uploaded.py  test_concurrent_uploads.py  test_happy_path.py  test_mixed_survey_staging.py  test_pause_resume_stop.py  test_staging_failures.py  test_upload_retry.py
